add command line
